--- a/pages/htmlQuiz.html
+++ b/pages/htmlQuiz.html
@@ -12,7 +12,7 @@
             Co oznacza skrot HTML?
         </div>
         <div class="answer-cointainer">
-            <div class="answer">Hasjw damdwkqn kdwqkmom kmdkwqmdom</div>
+            <div class="answer">Hasjw damdwkqn kdwqkmom kmdkwqmdomdsadasdawdsawdsa</div>
             <div class="answer">dwadsaew fwdfsdfewf fwfdsfe</div>
             <div class="answer"> fewfdsfefw</div>
             <div class="answer"> BGDR</div>
