--- a/pages/htmlQuiz.html
+++ b/pages/htmlQuiz.html
@@ -18,5 +18,7 @@
             <div class="answer"> BGDR</div>
         </div>    
     </div>
+
+    <script type="module" src="../scripts/js-quizPage.js"></script>
 </body>
 </html>
