--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         </div>
     </div>
 
-    <script type="module" src="scripts/js-mainPage.js"></script>
+    <script src="scripts/js-mainPage.js"></script>
 </body>
 </html>
