--- a/pages/htmlQuiz.html
+++ b/pages/htmlQuiz.html
@@ -19,6 +19,6 @@
         </div>    
     </div>
 
-    <script type="module" src="../scripts/js-quizPage.js"></script>
+    <script src="../scripts/js-quizPage.js"></script>
 </body>
 </html>
