--- a/pages/htmlQuiz.html
+++ b/pages/htmlQuiz.html
@@ -7,6 +7,7 @@
     <title></title>
 </head>
 <body>
+    <p class="points">0</p>
     <div class="quest-cointainer">
         <div class="question">
             Co oznacza skrot HTML?
