--- a/pages/htmlQuiz.html
+++ b/pages/htmlQuiz.html
@@ -7,8 +7,11 @@
     <title></title>
 </head>
 <body>
-    <p class="points">0</p>
-    <div class="quest-cointainer">
+    <div class="stars"></div>
+    <main>
+        <div class="timer">5</div>
+        <div class="points"></div>
+        <div class="quest-cointainer">
         <div class="question">
             Co oznacza skrot HTML?
         </div>
@@ -19,6 +22,7 @@
             <div class="answer"> BGDR</div>
         </div>    
     </div>
+    </main>
 
     <script src="../scripts/js-quizPage.js"></script>
 </body>
