--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <div class="choosing-container">
-        <div class="option html">
+        <div class="option" title="html">
             HTML
         </div>
-        <div class="option angler">
+        <div class="option" title="angler">
             ANGLER
         </div>
-        <div class="option cats">
+        <div class="option" title="cats">
             CATS
         </div>
-        <div class="option dogs">
+        <div class="option" title="dogs">
             DOGS
         </div>
     </div>
