--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Quizly</title>
 </head>
 <body>
+    <div class="stars"></div>
     <div class="choosing-container">
         <div class="option" title="html">
             HTML
