--- a/pages/htmlQuiz.html
+++ b/pages/htmlQuiz.html
@@ -12,16 +12,17 @@
         <div class="timer">5</div>
         <div class="points"></div>
         <div class="quest-cointainer">
-        <div class="question">
-            Co oznacza skrot HTML?
+            <div class="question">
+                Co oznacza skrot HTML?
+            </div>
+            <div class="answer-cointainer">
+                <div class="answer">Hasjw damdwkqn kdwqkmom kmdkwqmdomdsadasdawdsawdsa</div>
+                <div class="answer">dwadsaew fwdfsdfewf fwfdsfe</div>
+                <div class="answer"> fewfdsfefw</div>
+                <div class="answer"> BGDR</div>
+            </div>    
         </div>
-        <div class="answer-cointainer">
-            <div class="answer">Hasjw damdwkqn kdwqkmom kmdkwqmdomdsadasdawdsawdsa</div>
-            <div class="answer">dwadsaew fwdfsdfewf fwfdsfe</div>
-            <div class="answer"> fewfdsfefw</div>
-            <div class="answer"> BGDR</div>
-        </div>    
-    </div>
+        <div class="back">&#10005;</div>
     </main>
 
     <script src="../scripts/js-quizPage.js"></script>
